<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <LinearLayout
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:paddingTop="25dp"
                    android:text="@string/namadepan"
                    android:textStyle="bold"
                    android:textColor="#aaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:paddingBottom="15dp"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtNamaDepan"
                    android:hint="@string/nama_depan_anda"/>
            <View
                    android:layout_gravity="center"
                    android:layout_width="356dp"
                    android:layout_height="1px"
                    android:background="#80000000"/>
            <TextView
                    android:paddingTop="10dp"
                    android:text="@string/namabelakang"
                    android:textStyle="bold"
                    android:textColor="#aaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:paddingBottom="15dp"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtNamaBelakang"
                    android:hint="@string/nama_belakang_anda"/>
            <View
                    android:layout_gravity="center"
                    android:layout_width="356dp"
                    android:layout_height="1px"

                    android:background="#80000000"/>
            <TextView
                    android:paddingTop="10dp"
                    android:text="@string/alamatemail"
                    android:textStyle="bold"
                    android:textColor="#aaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:paddingBottom="15dp"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtEmail"
                    android:hint="@string/nama_domain_com"/>
            <View
                    android:layout_gravity="center"
                    android:layout_width="356dp"
                    android:layout_height="1px"

                    android:background="#80000000"/>
            <TextView
                    android:paddingTop="10dp"
                    android:text="@string/jenkel"
                    android:textStyle="bold"
                    android:textColor="#aaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/spJenkel"/>

            <View
                    android:layout_gravity="center"
                    android:layout_width="356dp"
                    android:layout_height="1px"

                    android:background="#80000000"/>

            <TextView
                    android:paddingTop="10dp"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textColor="#aaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            
            <android.support.design.widget.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                <android.support.design.widget.TextInputEditText
                        android:background="@null"
                        android:id="@+id/txtPassword"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/password_kecil"/>

            </android.support.design.widget.TextInputLayout>

            <View
                    android:layout_gravity="center"
                    android:layout_width="356dp"
                    android:layout_height="1px"

                    android:background="#80000000"/>

            <TextView
                    android:paddingTop="10dp"
                    android:text="@string/repassword"
                    android:textStyle="bold"
                    android:textColor="#aaaaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                <android.support.design.widget.TextInputEditText
                        android:background="@null"
                        android:id="@+id/txtRePassword"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/password_kecil"/>
            </android.support.design.widget.TextInputLayout>

            <View
                    android:layout_gravity="center"
                    android:layout_width="356dp"
                    android:layout_height="1px"

                    android:background="#80000000"/>

            <CheckBox
                    android:textColor="#757575"
                    android:paddingTop="10dp"
                    android:text="@string/checkbox"
                    android:layout_width="wrap_content"
                    android:id="@+id/checkBox"
                    android:buttonTint="@color/blue"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>

            <Button
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:text="@string/daftar"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/btnDaftar"
                    android:textSize="18sp"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>